// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Group Example renders and checks snapshot 1`] = `
{
  "output": {
    "id": {
      "value": "\${azurerm_monitor_action_group.testAzureActionGroup_actiongroup_73C559FB.id}",
    },
  },
  "provider": {
    "azurerm": [
      {
        "features": {
          "resource_group": {
            "prevent_deletion_if_contains_resources": false,
          },
        },
      },
    ],
  },
  "resource": {
    "azurerm_monitor_action_group": {
      "testAzureActionGroup_actiongroup_73C559FB": {
        "email_receiver": [
          {
            "email_address": "test1@email.com",
            "name": "testemail1",
            "use_common_alert_schema": true,
          },
          {
            "email_address": "test2@email.com",
            "name": "testemail2",
            "use_common_alert_schema": false,
          },
        ],
        "enabled": true,
        "location": "global",
        "name": "testactiongroup",
        "resource_group_name": "\${azurerm_resource_group.rg.name}",
        "short_name": "testshortn",
        "tags": {},
        "webhook_receiver": [
          {
            "name": "testwebhook1",
            "service_uri": "https://www.example1.com",
            "use_common_alert_schema": true,
          },
          {
            "name": "testwebhook2",
            "service_uri": "https://www.example2.com",
            "use_common_alert_schema": false,
          },
        ],
      },
    },
    "azurerm_resource_group": {
      "rg": {
        "location": "eastus",
        "name": "rg-\${var.name}",
        "tags": {
          "test": "test",
        },
      },
    },
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.70.0",
      },
    },
  },
  "variable": {
    "name": {
      "default": "test",
      "description": "System name used to randomize the resources",
      "type": "string",
    },
  },
}
`;

exports[`Action Group With Defaults 2 renders an Action Group with defaults and checks snapshot 1`] = `
"{
  "output": {
    "id": {
      "value": "\${azurerm_monitor_action_group.testAzureActionGroupDefaults_actiongroup_ADD914FD.id}"
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_monitor_action_group": {
      "testAzureActionGroupDefaults_actiongroup_ADD914FD": {
        "enabled": false,
        "location": "global",
        "name": "testactiongroup",
        "resource_group_name": "rg-test",
        "short_name": "testshortn",
        "tags": {
          "test": "test"
        }
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.70.0"
      }
    }
  }
}"
`;

exports[`Action Group With Defaults renders an Action Group with defaults and checks snapshot 1`] = `
"{
  "output": {
    "id": {
      "value": "\${azurerm_monitor_action_group.testAzureActionGroupDefaults_actiongroup_ADD914FD.id}"
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_monitor_action_group": {
      "testAzureActionGroupDefaults_actiongroup_ADD914FD": {
        "enabled": true,
        "location": "global",
        "name": "testactiongroup",
        "resource_group_name": "\${azurerm_resource_group.MyResourceGroup.name}",
        "short_name": "testshortn",
        "tags": {
        }
      }
    },
    "azurerm_resource_group": {
      "MyResourceGroup": {
        "location": "eastus",
        "name": "testrg"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.70.0"
      }
    }
  }
}"
`;
